[package]
name = "bee6-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = { version = "0.6.1", features = [] }
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
shuttle-serenity = { version = "0.38.0", features = [] }
tracing = "0.1.37"
tokio = "1.26.0"
mongodb = "2.8.1"
serde = { version = "1.0.196", features = ["derive"] }
bson = "2.9.0"
futures = "0.3.30"
